# polyagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  PolyAgent_产品说明书.docx  README.md  docker-compose.yml  overview.md  pyproject.toml  简历替换方案.md
.github/workflows/: ci.yml
.workbuddy/memory/: 2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  MEMORY.md
docs/: ARCHITECTURE.md  SDK_USAGE.md
examples/: sdk_demo.py  tool_demo.py
examples/repo_analysis/: .gitkeep  README.md  analyze.py
observability/: prometheus.yml
polyagent/: __init__.py  config.py
polyagent/cli/: __init__.py  __main__.py  demo.py
polyagent/core/: __init__.py  agent.py  exceptions.py  types.py
polyagent/eval/: __init__.py  dataset.py  runner.py  scorers.py  types.py
polyagent/llm/: __init__.py  client.py  deepseek.py  middleware.py  mock.py  openai_compat.py  provider.py  types.py
polyagent/memory/: __init__.py  base.py  buffer.py  compressor.py  vector_memory.py
polyagent/observability/: __init__.py  exporters.py  logging.py  metrics.py  middleware.py  report.py  tracer.py
polyagent/orchestration/: __init__.py  orchestrator.py  roles.py  types.py
polyagent/persistence/: __init__.py  chat_store.py  store.py
polyagent/rag/: __init__.py  embedder.py  index.py  splitter.py  vectorstore.py
polyagent/skills/: __init__.py  installer.py  registry.py
polyagent/skills/builtins/: datetime_skill.py  file_analyzer_skill.py  weather_skill.py
polyagent/tools/: __init__.py  base.py  builtins.py  registry.py  sandbox.py
scripts/: gen_docx.py
tests/: test_agent.py  test_chat_store.py  test_cli.py  test_eval.py  test_exporters.py  test_llm_deepseek.py  test_llm_middleware.py  test_llm_mock.py  test_memory.py  test_observability.py  test_orchestration.py  test_persistence.py  test_rag.py  test_sandbox.py  test_skills.py  test_smoke.py  test_tools.py
